# haskellffi

./: README.md  buildlog.txt  dept.dot  haskellffi.cabal  run.sh  stack.yaml  stack_install.sh
src/: AronModule.hs  Main.hi  Main.hs  QuickSortTest.hs  QuickSortTest.hs~
