name:                haskellffi 
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/myproject#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2019 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable             haskellffi 
  hs-source-dirs:      src
--  main-is:             QuickSortTest.hs
  main-is:             Main.hs
--  main-is:             Main1.hs
  ghc-options:         -O2
  cpp-options:         -DTEST
  default-language:    Haskell2010
  c-sources:           /Users/aaa/myfile/bitbucket/haskellffi/AronCLibFFI.c
  build-depends:       base >= 4.7 && < 5,
                       regex-compat,
                       unix,
                       text,
                       time,
                       split,
                       directory,
                       filepath,
                       process,
                       random,
                       bytestring,
                       containers,
                       regex-tdfa,
                       unordered-containers,
                       vector,
                       array,
                       pretty-simple,
                       regex-posix,
                       regex-base,
                       utf8-string,
                       raw-strings-qq,
                       sqlite-simple,
                       wai,
                       aeson,
                       network-uri,
                       http-types,
                       warp,
                       turtle,
                       websockets,
                       wai-websockets,
                       wai-predicates,
                       regex,
                       wai-extra,
                       blaze-builder,
                       safe,
                       wai-util,
                       wai-session,
                       http-conduit,
                       word8,
                       email-validate,
                       data-default,
                       neat-interpolation,
                       hedis,
                       -- GLFW,
                       OpenGL,
                       GLFW-b,
                       bindings-GLFW,
                       ghcid,
                       hashable,
                       mini-egison,
                       egison-pattern-src,
                       unix-time,

                       -- build error on ghc-8.10.3
                       diagrams,
                       diagrams-lib,
                       diagrams-svg,
                       diagrams,

                       mysql-haskell,
                       io-streams,
                       ansi-terminal,
                       linear,
                       hint,
                       -- FTGL,
                       GLUT,
                       rainbow,
                       uri-encode,
                       pretty-terminal,
                       strict-io,
                       ghci-websockets,
                       regex-applicative,
                       lens,
                       with-utf8,
                       vty,
                       bytestring-trie,
                       microlens,
                       haskeline,
                       formatting,
                       JuicyPixels,
                       juicy-draw,
                       primitive,
                       orthotope,
                       ascii-char,
                       transformers,
                       hxt,
                       mtl,
                       text-format-simple,
                       text-icu,
                       regex-applicative-text,

                       -- Network.Socket
                       network,
                       stm,
                       -- Wed  5 Apr 16:26:40 2023 
                       -- https://hackage.haskell.org/package/orthotope-0.1.2.0
                       mini-egison,
                       -- Fri  9 Jun 11:33:46 2023 
                       -- For Data.List.HT, outerProduct
                       utility-ht,
                       case-insensitive,
                       -- Tue 15 Aug 09:26:26 2023 
                       -- ppShow pPrint
                       pretty-show,
                       GenericPretty,
                       massiv,
                       inline-c,
                       silently,
                       fsnotify,
                       system-fileio,
                       HaskellForMaths
                       



